[package]
name = "codespaces-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
poise = { git = "https://github.com/fgardt/poise", branch = "feat/user_apps", features = ["unstable", "default"]}
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "*", features = ["json", "blocking"] }
serde = "1.0.204"
